--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.9.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
